src/test/ui/in-band-lifetimes/mismatched_trait_impl-2.stderr
error[E0308]: method not compatible with trait
  --> $DIR/mismatched_trait_impl-2.rs:8:5
   |
LL |     fn deref(&self) -> &dyn Trait {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'r> fn(&'r Struct) -> &'r <Struct as std::ops::Deref>::Target`
              found fn pointer `for<'r> fn(&'r Struct) -> &'r (dyn Trait + 'r)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
